// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StoriesForTests/Tooltip Base 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <ForwardRef
            defaultOpen={false}
            hideDelay="350"
            maxWidth="24em"
            placement="bottom"
            showDelay="100"
            tooltip="I am a Tooltip!"
          >
            <ForwardRef
              defaultOpen={false}
              hideDelay="350"
              id="random-id-14"
              modifiers={null}
              openOnClick={false}
              openOnHover={true}
              popperPlacement="bottom"
              showArrow={true}
              showDelay="100"
              trigger={
                <ForwardRef
                  asLink={false}
                  disabled={false}
                  fullWidth={false}
                  icon={null}
                  iconSide="right"
                  size="medium"
                >
                  Hover me
                </ForwardRef>
              }
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <ForwardRef
                      aria-describedby="random-id-14"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-label="Open"
                      asLink={false}
                      disabled={false}
                      fullWidth={false}
                      icon={null}
                      iconSide="right"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      size="medium"
                    >
                      <Button__WrapperButton
                        aria-describedby="random-id-14"
                        aria-expanded={false}
                        aria-haspopup={true}
                        aria-label="Open"
                        disabled={false}
                        fullWidth={false}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        size="medium"
                      >
                        <button
                          aria-describedby="random-id-14"
                          aria-expanded={false}
                          aria-haspopup={true}
                          aria-label="Open"
                          className="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                          disabled={false}
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          size="medium"
                        >
                          Hover me
                        </button>
                      </Button__WrapperButton>
                    </ForwardRef>
                  </InnerReference>
                </Reference>
                <Popper
                  modifiers={null}
                  placement="bottom"
                >
                  <InnerPopper
                    eventsEnabled={true}
                    modifiers={null}
                    placement="bottom"
                    positionFixed={false}
                    referenceElement={
                      <button
                        aria-describedby="random-id-14"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Open"
                        class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                      >
                        Hover me
                      </button>
                    }
                  >
                    <Styled(Box)
                      className=" nds-popper-pop-up"
                      id="random-id-14"
                      maxWidth="24em"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      open={false}
                      position={
                        Object {
                          "left": 0,
                          "opacity": 0,
                          "pointerEvents": "none",
                          "position": "absolute",
                          "top": 0,
                        }
                      }
                      role="tooltip"
                      theme={
                        Object {
                          "borders": Array [],
                          "breakpoints": Object {
                            "extraLarge": "1920px",
                            "extraSmall": "0px",
                            "large": "1360px",
                            "medium": "1024px",
                            "small": "768px",
                          },
                          "colors": Object {
                            "black": "#011e38",
                            "blackBlue": "#122b47",
                            "blue": "#216beb",
                            "darkBlue": "#00438f",
                            "darkGrey": "#434d59",
                            "green": "#008059",
                            "grey": "#c0c8d1",
                            "lightBlue": "#e1ebfa",
                            "lightGreen": "#e9f7f2",
                            "lightGrey": "#e4e7eb",
                            "lightRed": "#fae6ea",
                            "lightYellow": "#fcf5e3",
                            "red": "#cc1439",
                            "white": "#ffffff",
                            "whiteGrey": "#f0f2f5",
                            "yellow": "#ffbb00",
                          },
                          "fontSizes": Object {
                            "large": "20px",
                            "larger": "26px",
                            "largest": "46px",
                            "medium": "16px",
                            "small": "14px",
                            "smaller": "12px",
                          },
                          "fontWeights": Object {
                            "bold": "600",
                            "light": "300",
                            "medium": "500",
                            "normal": "400",
                          },
                          "fonts": Object {
                            "base": "'IBM Plex Sans', sans-serif",
                            "mono": "'IBM Plex Mono', monospace",
                          },
                          "lineHeights": Object {
                            "base": "1.5",
                            "sectionTitle": "1.23076923",
                            "smallTextBase": "1.71428571",
                            "smallTextCompressed": "1.14285714",
                            "smallerText": "1.33333333",
                            "subsectionTitle": "1.2",
                            "title": "1.04347826",
                          },
                          "radii": Object {
                            "circle": "50%",
                            "medium": "4px",
                            "small": "2px",
                          },
                          "shadows": Object {
                            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                          },
                          "space": Object {
                            "half": "4px",
                            "none": "0px",
                            "x1": "8px",
                            "x2": "16px",
                            "x3": "24px",
                            "x4": "32px",
                            "x5": "40px",
                            "x6": "48px",
                            "x8": "64px",
                          },
                          "zIndex": Object {
                            "content": 100,
                            "overlay": 1000,
                            "tabsBar": 210,
                            "tabsScollIndicator": 200,
                          },
                        }
                      }
                    >
                      <div
                        className="Box-sc-1qu1edy-0 sc-fzXfNh kAYrkP  nds-popper-pop-up"
                        id="random-id-14"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        open={false}
                        role="tooltip"
                      >
                        I
                         
                        a
                        m
                         
                        a
                         
                        T
                        o
                        o
                        l
                        t
                        i
                        p
                        !
                        <PopperArrow
                          backgroundColor="white"
                          borderColor="grey"
                          key="popper-arrow"
                          placement="bottom"
                          style={Object {}}
                        >
                          <div
                            className="PopperArrow-sc-1bcgj4w-0 jABZcb"
                            style={Object {}}
                          />
                        </PopperArrow>
                      </div>
                    </Styled(Box)>
                  </InnerPopper>
                </Popper>
              </Manager>
            </ForwardRef>
          </ForwardRef>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots StoriesForTests/Tooltip Open by default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <ForwardRef
            defaultOpen={true}
            hideDelay="350"
            maxWidth="24em"
            placement="bottom"
            showDelay="100"
            tooltip="I am an open Tooltip!"
          >
            <ForwardRef
              defaultOpen={true}
              hideDelay="350"
              id="random-id-15"
              modifiers={null}
              openOnClick={false}
              openOnHover={true}
              popperPlacement="bottom"
              showArrow={true}
              showDelay="100"
              trigger={
                <ForwardRef
                  asLink={false}
                  disabled={false}
                  fullWidth={false}
                  icon={null}
                  iconSide="right"
                  size="medium"
                >
                  Hover me
                </ForwardRef>
              }
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <ForwardRef
                      aria-describedby="random-id-15"
                      aria-expanded={true}
                      aria-haspopup={true}
                      aria-label="Close"
                      asLink={false}
                      disabled={false}
                      fullWidth={false}
                      icon={null}
                      iconSide="right"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      size="medium"
                    >
                      <Button__WrapperButton
                        aria-describedby="random-id-15"
                        aria-expanded={true}
                        aria-haspopup={true}
                        aria-label="Close"
                        disabled={false}
                        fullWidth={false}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        size="medium"
                      >
                        <button
                          aria-describedby="random-id-15"
                          aria-expanded={true}
                          aria-haspopup={true}
                          aria-label="Close"
                          className="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                          disabled={false}
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          size="medium"
                        >
                          Hover me
                        </button>
                      </Button__WrapperButton>
                    </ForwardRef>
                  </InnerReference>
                </Reference>
                <Popper
                  modifiers={null}
                  placement="bottom"
                >
                  <InnerPopper
                    eventsEnabled={true}
                    modifiers={null}
                    placement="bottom"
                    positionFixed={false}
                    referenceElement={
                      <button
                        aria-describedby="random-id-15"
                        aria-expanded="true"
                        aria-haspopup="true"
                        aria-label="Close"
                        class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                      >
                        Hover me
                      </button>
                    }
                  >
                    <Styled(Box)
                      className=" nds-popper-pop-up"
                      id="random-id-15"
                      maxWidth="24em"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      open={true}
                      position={
                        Object {
                          "left": 0,
                          "opacity": 0,
                          "pointerEvents": "none",
                          "position": "absolute",
                          "top": 0,
                        }
                      }
                      role="tooltip"
                      theme={
                        Object {
                          "borders": Array [],
                          "breakpoints": Object {
                            "extraLarge": "1920px",
                            "extraSmall": "0px",
                            "large": "1360px",
                            "medium": "1024px",
                            "small": "768px",
                          },
                          "colors": Object {
                            "black": "#011e38",
                            "blackBlue": "#122b47",
                            "blue": "#216beb",
                            "darkBlue": "#00438f",
                            "darkGrey": "#434d59",
                            "green": "#008059",
                            "grey": "#c0c8d1",
                            "lightBlue": "#e1ebfa",
                            "lightGreen": "#e9f7f2",
                            "lightGrey": "#e4e7eb",
                            "lightRed": "#fae6ea",
                            "lightYellow": "#fcf5e3",
                            "red": "#cc1439",
                            "white": "#ffffff",
                            "whiteGrey": "#f0f2f5",
                            "yellow": "#ffbb00",
                          },
                          "fontSizes": Object {
                            "large": "20px",
                            "larger": "26px",
                            "largest": "46px",
                            "medium": "16px",
                            "small": "14px",
                            "smaller": "12px",
                          },
                          "fontWeights": Object {
                            "bold": "600",
                            "light": "300",
                            "medium": "500",
                            "normal": "400",
                          },
                          "fonts": Object {
                            "base": "'IBM Plex Sans', sans-serif",
                            "mono": "'IBM Plex Mono', monospace",
                          },
                          "lineHeights": Object {
                            "base": "1.5",
                            "sectionTitle": "1.23076923",
                            "smallTextBase": "1.71428571",
                            "smallTextCompressed": "1.14285714",
                            "smallerText": "1.33333333",
                            "subsectionTitle": "1.2",
                            "title": "1.04347826",
                          },
                          "radii": Object {
                            "circle": "50%",
                            "medium": "4px",
                            "small": "2px",
                          },
                          "shadows": Object {
                            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                          },
                          "space": Object {
                            "half": "4px",
                            "none": "0px",
                            "x1": "8px",
                            "x2": "16px",
                            "x3": "24px",
                            "x4": "32px",
                            "x5": "40px",
                            "x6": "48px",
                            "x8": "64px",
                          },
                          "zIndex": Object {
                            "content": 100,
                            "overlay": 1000,
                            "tabsBar": 210,
                            "tabsScollIndicator": 200,
                          },
                        }
                      }
                    >
                      <div
                        className="Box-sc-1qu1edy-0 sc-fzXfNh qNuDP  nds-popper-pop-up"
                        id="random-id-15"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        open={true}
                        role="tooltip"
                      >
                        I
                         
                        a
                        m
                         
                        a
                        n
                         
                        o
                        p
                        e
                        n
                         
                        T
                        o
                        o
                        l
                        t
                        i
                        p
                        !
                        <PopperArrow
                          backgroundColor="white"
                          borderColor="grey"
                          key="popper-arrow"
                          placement="bottom"
                          style={Object {}}
                        >
                          <div
                            className="PopperArrow-sc-1bcgj4w-0 jABZcb"
                            style={Object {}}
                          />
                        </PopperArrow>
                      </div>
                    </Styled(Box)>
                  </InnerPopper>
                </Popper>
              </Manager>
            </ForwardRef>
          </ForwardRef>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;
